--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "express": "^5.1.0",
     "node-fetch": "^3.3.2"
   },
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
