--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "dependencies": {
-    "express": "^5.1.0",
-    "node-fetch": "^3.3.2"
+    "axios": "^1.9.0",
+    "express": "^5.1.0"
   },
-  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
